vlib/v/checker/tests/array_decl_type_err.out
vlib/v/checker/tests/array_decl_type_err.vv:1:10: error: `array` is an internal type, it cannot be used directly. Use `[]int`, `[]Foo` etc
    1 | mut a := []array{}
      |          ~~~~~~~~
    2 | a.insert(4, '1')
